--- a/Zbang.Cloudents.Mvc2Jared/Zbang.Cloudents.Mvc2Jared.csproj
+++ b/Zbang.Cloudents.Mvc2Jared/Zbang.Cloudents.Mvc2Jared.csproj
@@ -202,6 +202,7 @@
     <Content Include="images1\combined-shape%403x.png" />
     <Content Include="images1\combined-shape.png" />
     <Content Include="images1\triangle-2%403x.png" />
+    <Content Include="images1\triangle-2-copy%403x.png" />
     <Content Include="images1\triangle-2.png" />
     <Content Include="images1\vertical_sight.jpg" />
     <Content Include="Js\app.js" />
